2007-04-27  Keith Seitz  <keiths@redhat.com>

	* gnu/classpath/jdwp/event/filters/LocationOnlyFilter.java
	(matches): Use Location.equals to determine equality.
	* vm/reference/gnu/classpath/jdwp/VMMethod.java (equals): 
	New method.
	* gnu/classpath/jdwp/util/Location.java (equals):
	New method.	

2007-04-27  Roman Kennke  <roman@kennke.org>

	* java/nio/CharViewBufferImpl.java
	(slice): Fixed offset for slice buffer.
	* java/nio/DoubleViewBufferImpl.java
	(slice): Fixed offset for slice buffer.
	* java/nio/FloatViewBufferImpl.java
	(slice): Fixed offset for slice buffer.
	* java/nio/IntViewBufferImpl.java
	(slice): Fixed offset for slice buffer.
	* java/nio/LongViewBufferImpl.java
	(slice): Fixed offset for slice buffer.
	* java/nio/ShortViewBufferImpl.java
	(slice): Fixed offset for slice buffer.

2007-04-25  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/peer/gtk/GdkFontPeer.java,
	* gnu/java/awt/peer/gtk/GdkGraphicsEnvironment.java,
	* gnu/java/awt/peer/gtk/GdkPixbufDecoder.java,
	* gnu/java/awt/peer/gtk/GdkScreenGraphicsDevice.java,
	* gnu/java/awt/peer/gtk/GtkGenericPeer.java,
	* gnu/java/awt/peer/gtk/GtkToolkit.java:
	Added fields to hold the native state. Added class initialization
	things to fetch the JNI field IDs.
	* include/gnu_java_awt_peer_gtk_GdkGraphicsEnvironment.h,
	* include/gnu_java_awt_peer_gtk_GdkScreenGraphicsDevice.h,
	* include/gnu_java_awt_peer_gtk_GtkGenericPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkToolkit.h:
	Added / changed class init methods for field ID initialization.
	* native/jni/classpath/Makefile.am: Removed native_state stuff.
	* native/jni/classpath/native_state.c,
	* native/jni/classpath/native_state.h: Removed.
	* native/jni/gconf-peer/Makefile.am: Removed native_state stuff.
	* native/jni/gtk-peer/Makefile.am: Removed native_state stuff.
	* native/jni/gtk-peer/cairographics2d.h,
	* native/jni/gtk-peer/gdkdisplay.h,
	* native/jni/gtk-peer/gdkfont.h,
	* native/jni/gtk-peer/GtkDragSourceContextPeer.c,